// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProtectedRoute /> renders About page with default props 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ProtectedRoute
    component={null}
    currentUserName=""
    location={null}
    path="/about"
    render={null}
  />
</Router>
`;

exports[`<ProtectedRoute /> renders LoginPage with location = testlocation prop 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ProtectedRoute
    component={null}
    currentUserName=""
    location={
      Object {
        "pathname": "testlocation",
      }
    }
    path="/about"
    render={null}
  />
</Router>
`;

exports[`<ProtectedRoute /> renders properly with mock Component provided 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ProtectedRoute
    component={
      <Spinner
        spinnerClasses=""
        wrapperClasses=""
      />
    }
    currentUserName="Test User Name"
    location={null}
    path="/about"
    render={null}
  />
</Router>
`;

exports[`<ProtectedRoute /> renders properly with the render function provided 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ProtectedRoute
    component={null}
    currentUserName=""
    location={null}
    path="/about"
    render={[MockFunction]}
  />
</Router>
`;
